compiler/framework/test/fail/boolean_operator_abuse.cvc
// Comparisons don't work on booleans, except for ==.


export int main() {
    if (4 && 7) {}
    return 0;
}
